--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+    implementation "org.wiremock:wiremock-standalone:3.7.0"
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
     annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
@@ -64,6 +65,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation "net.datafaker:datafaker:2.4.4"
+    testImplementation "org.springframework.cloud:spring-cloud-starter-contract-stub-runner" // 선택
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
