--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     implementation "org.wiremock:wiremock-standalone:3.7.0"
+    implementation 'org.springframework.boot:spring-boot-starter-quartz'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
     annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
